# workclaw

./: .gitignore  README.md
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/v1/: auth.py  capabilities.py  chat.py  health.py  skills.py  tasks.py
backend/app/capabilities/: base.py  bootstrap.py  document.py  file_parse.py  knowledge.py  registry.py  registry_types.py  schedule.py
backend/app/config/: model_profiles.py  settings.py
backend/app/core/: agentic_loop.py  orchestrator.py
backend/app/models/: __init__.py  capability_call.py  database.py  document.py  message.py  session.py  skill.py  task.py  user.py
backend/app/services/: model_provider.py
backend/tests/: test_api.py  test_basic.py
docs/: PROJECT_PLAN.md  SKILL_PANEL_PLAN.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/components/layout/: AppLayout.css  AppLayout.tsx
frontend/src/pages/: AssistantPage.css  AssistantPage.tsx  Dashboard.css  Dashboard.tsx  SessionsPage.css  SessionsPage.tsx  SkillsPage.css  SkillsPage.tsx  TasksPage.css  TasksPage.tsx
frontend/src/styles/: index.css
frontend/src/types/: index.ts
scripts/: keep-workclaw-tunnel.sh
